# QIA-Final-Regression-Test

./: pyproject.toml
.devcontainer/: devcontainer.json
data/stocks/: 2330.csv  2412.csv  2454.csv
src/: backtest-adjusted.ipynb  backtest.ipynb  backtest_adjusted.ipynb  drawing.ipynb  main.ipynb
src/lib/: performance_analysis.py  plotting.py  technical_indicators.py
src/lib/backtest/: backtest_adjusted.py  strategy_four.py  strategy_one.py  strategy_three.py  strategy_two.py
